--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>TOOL NÀY LÀ CỦA HƯNG</title>
-    <link rel="stylesheet" href="style.css">     
+    <link rel="stylesheet" href="style.css">  
+    <link rel="icon" type="icon" href="img/logo.png">   
 </head>
 <body>
 
@@ -18,94 +19,75 @@
             </ul>
         </div>        
 
-        <label for="inputNumber">Nhập vào số (Số chẵn):</label>
-        <input type="number" id="inputNumber" min="4" step="2" required>
+        <label for="inputNumber">Đếm số:</label>
+        <input type="number" id="inputNumber" min="4" step="2" placeholder="Nhập vào số lớn hơn hoặc bằng 4: " required>
 
         <div class="sequence-container">
             <h4>Dãy số:</h4>
-            <input type="text" id="sequence" readonly>
-            <button id="copyButton" onclick="copySequence()"><i class="fa-solid fa-copy"></i></button>
+            <input type="text" id="sequence" placeholder="Nhập vào số chẵn lớn hơn hoặc bằng 4 nha!!!" readonly>
+            <span id="totalLength">Total: 0</span>
+            <button id="copyButton" onclick="copyToClipboard('sequence')"><i class="fa-solid fa-copy"></i></button>
         </div>
 
         <div class="sequence-container">
             <h4>Đảo ngược:</h4>
-            <input type="text" id="reversedSequence" readonly>
-            <button id="copyButton" onclick="copySequence()"><i class="fa-solid fa-copy"></i></button>
+            <input type="text" id="reversedSequence" placeholder="Nhập vào số chẵn lớn hơn hoặc bằng 4 nha!!!" readonly>
+            <span id="reversedLength">Total: 0</span>
+            <button id="copyButton" onclick="copyToClipboard('reversedSequence')"><i class="fa-solid fa-copy"></i></button>
         </div>
     </div>
 
     <script>
         let sequence = [];
+        let reversed = [];
 
-        // Sự kiện input để tự động tạo dãy số khi người dùng nhập vào ô input
+        // Sự kiện input
         document.getElementById("inputNumber").addEventListener("input", generateSequence);
 
         function generateSequence() {
             let num = parseInt(document.getElementById("inputNumber").value);
-            sequence = [];
-
-            // Kiểm tra tính hợp lệ của đầu vào (chỉ cho phép số chẵn)
             if (isNaN(num) || num <= 0 || num % 2 !== 0) {
-                document.getElementById("sequence").value = "Vui lòng nhập một số chẵn.";
-                document.getElementById("reversedSequence").value = "";
+                displayMessage("Vui lòng nhập một số chẵn.", true);
                 return;
             }
 
-            // Tính số phần tử nửa đầu (bao gồm số 3 ở giữa)
-            let half = Math.floor((num - 1) / 2); // Bớt 1 vì số 3 đã chiếm một phần
+            sequence = Array(Math.floor((num - 1) / 2)).fill(1).concat(3, Array(Math.floor((num - 1) / 2)).fill(2), 3);
+            reversed = sequence.map((val) => (val === 1 ? 2 : val === 2 ? 1 : val));
 
-            // Xây dựng dãy số
-            for (let i = 0; i < half; i++) {
-                sequence.push(1);
-            }
-
-            sequence.push(3); // Thêm số 3 vào giữa
-
-            for (let i = 0; i < half; i++) {
-                sequence.push(2);
-            }
-
-            sequence.push(3); // Thêm số 3 cuối cùng
-
-            document.getElementById("sequence").value = sequence.join(","); // Hiển thị trong input
-            
-            // Tự động đảo ngược dãy số sau khi tạo
-            reverseSequence();
+            updateDisplay();
         }
 
-        function reverseSequence() {
-            let reversed = [];
-            let half = Math.floor((sequence.length - 1) / 2);
-
-            for (let i = 0; i < half; i++) {
-                reversed.push(2);
-            }
-
-            reversed.push(3); // Thêm số 3 vào giữa
-
-            for (let i = 0; i < half; i++) {
-                reversed.push(1);
-            }
-
-            reversed.push(3); // Thêm số 3 cuối cùng
-
-            document.getElementById("reversedSequence").value = reversed.join(","); // Hiển thị trong input
+        function updateDisplay() {
+            document.getElementById("sequence").value = sequence.join(",");
+            document.getElementById("reversedSequence").value = reversed.join(",");
+            document.getElementById("totalLength").innerText = `Total: ${sequence.length}`;
+            document.getElementById("reversedLength").innerText = `Total: ${reversed.length}`;
         }
 
-        // Hàm sao chép dãy số
-        function copySequence() {
-            // Lấy dãy số từ phần tử input
-            let sequenceText = document.getElementById("sequence").value;
+        function displayMessage(message, clear) {
+            document.getElementById("sequence").value = clear ? "" : message;
+            document.getElementById("reversedSequence").value = clear ? "" : "";
+            document.getElementById("totalLength").innerText = "Total: 0";
+            document.getElementById("reversedLength").innerText = "Total: 0";
+        }
 
-            // Tạo một trường input tạm thời để sao chép
-            let tempInput = document.createElement("input");
-            tempInput.value = sequenceText;
-            document.body.appendChild(tempInput);
-            tempInput.select();
-            document.execCommand("copy");
-            document.body.removeChild(tempInput);
+        function copyToClipboard(id) {
+            let text = document.getElementById(id).value;
+            navigator.clipboard.writeText(text).then(() => {
+                showNotification(`Dãy số "${id}" đã được sao chép!`);
+            });
+        }
 
-            alert("Dãy số đã được sao chép!");
+        function showNotification(message) {
+            let notification = document.createElement("div");
+            notification.innerText = message;
+            Object.assign(notification.style, {
+                position: "fixed", bottom: "20px", right: "20px", backgroundColor: "#4caf50",
+                color: "#fff", padding: "10px 20px", borderRadius: "5px",
+                boxShadow: "0px 4px 6px rgba(0, 0, 0, 0.2)", fontSize: "16px", zIndex: "1000"
+            });
+            document.body.appendChild(notification);
+            setTimeout(() => document.body.removeChild(notification), 3000);
         }
     </script>
 
