--- a/main2.html
+++ b/main2.html
@@ -1,133 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <title>TOOL NÀY LÀ CỦA HƯNG</title>
-  <link rel="stylesheet" href="style.css">     
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <title>TOOL NÀY LÀ CỦA HƯNG</title>
+    <link rel="stylesheet" href="style.css">     
 </head>
 <body>
-  <div class="container">
-    <div class="menu">
-      <ul>
-          <li><a href="index.html">Đếm số</a></li>
-          <li><a href="main2.html">Điểm che khuất</a></li>
-          <li><a href="main3.html">Road Edge</a></li>
-      </ul>
-  </div>     
+    <div class="container">
+        <div class="menu">
+            <ul>
+                <li><a href="index.html">Đếm số</a></li>
+                <li><a href="main2.html">Điểm che khuất</a></li>
+                <li><a href="main3.html">Road Edge</a></li>
+            </ul>
+        </div>     
 
-    <label for="inputNumber">Nhập số nguyên chia hết cho 4 và lớn hơn hoặc bằng 8:</label>
-    <input type="number" id="inputNumber" min="8" step="4" required>
-    
-    <div class="sequence-container">
-      <h4>Dãy số:</h4>
-      <input type="text" id="sequence" readonly>
-      <button id="copyButton" onclick="copySequence()"><i class="fa-solid fa-copy"></i></button>
+        <label for="inputNumber">Điểm che khuất:</label>
+        <input type="number" id="inputNumber" min="8" step="4" placeholder="Nhập số nguyên chia hết cho 4 và lớn hơn hoặc bằng 8: " required>
+        
+        <div class="sequence-container">
+            <h4>Dãy số:</h4>
+            <input type="text" id="sequence" placeholder="Nhập số nguyên chia hết cho 4 và lớn hơn hoặc bằng 8 nha!!!" readonly>
+            <span id="totalLength">Total: 0</span>
+            <button id="copyButton" onclick="copyToClipboard('sequence')"><i class="fa-solid fa-copy"></i></button>
+        </div>
+
+        <div class="sequence-container">
+            <h4>Đảo ngược:</h4>
+            <input type="text" id="reversedSequence" placeholder="Nhập số nguyên chia hết cho 4 và lớn hơn hoặc bằng 8 nha!!!" readonly>
+            <span id="reversedLength">Total: 0</span>
+            <button id="copyButton" onclick="copyToClipboard('reversedSequence')"><i class="fa-solid fa-copy"></i></button>
+        </div>
     </div>
 
-    <div class="sequence-container">
-      <h4>Đảo ngược:</h4>
-      <input type="text" id="reversedSequence" readonly>
-      <button id="copyButton" onclick="copySequence()"><i class="fa-solid fa-copy"></i></button>
-    </div>
-  </div>
+    <script>
+        let sequence = [];
+        let reversed = [];
 
-  <script>
-    let sequence = [];
+        // Sự kiện input để tự động tạo dãy số khi người dùng nhập vào ô input
+        document.getElementById("inputNumber").addEventListener("input", generateSequence);
 
-    // Sự kiện input để tự động tạo dãy số khi người dùng nhập vào ô input
-    document.getElementById("inputNumber").addEventListener("input", generateSequence);
+        function generateSequence() {
+            let num = parseInt(document.getElementById("inputNumber").value);
+            if (isNaN(num) || num < 8 || num % 4 !== 0) {
+                displayMessage("Vui lòng nhập một số nguyên chia hết cho 4 và lớn hơn hoặc bằng 8.", true);
+                return;
+            }
 
-    function generateSequence() {
-      let num = parseInt(document.getElementById("inputNumber").value);
-      sequence = [];
+            const repeatSegment = [1, 4]; // Lặp "1, 4"
+            const segmentBefore = [1, 3]; // Đoạn "1, 3"
+            const segmentAfter = [2, 5];  // Đoạn "2, 5"
+            const endSegment = [2, 3];    // Đoạn kết thúc "2, 3"
+            const repeatCount = (num - 8) / 4;
 
-      // Kiểm tra giá trị đầu vào
-      if (isNaN(num) || num < 8 || num % 4 !== 0) {
-        document.getElementById("sequence").value = "Vui lòng nhập một số nguyên chia hết cho 4 và lớn hơn hoặc bằng 8.";
-        document.getElementById("reversedSequence").value = "";
-        return;
-      }
+            // Tạo dãy số
+            sequence = [
+                ...Array(repeatCount + 1).fill(repeatSegment).flat(),
+                ...segmentBefore,
+                ...Array(repeatCount + 1).fill(segmentAfter).flat(),
+                ...endSegment
+            ];
 
-      // Khởi tạo dãy số
-      const repeatSegment = [1, 4]; // Lặp "1, 4"
-      const segmentBefore = [1, 3]; // Đoạn "1, 3"
-      const segmentAfter = [2, 5];  // Đoạn "2, 5"
-      const endSegment = [2, 3];    // Đoạn kết thúc "2, 3"
+            reversed = [
+                ...Array(repeatCount + 1).fill(segmentAfter).flat(),
+                ...endSegment,
+                ...Array(repeatCount + 1).fill(repeatSegment).flat(),
+                ...segmentBefore
+            ];
 
-      // Số lần lặp của đoạn "1, 4" và "2, 5"
-      const repeatCount = (num - 8) / 4;
+            updateDisplay();
+        }
 
-      // Thêm đoạn "1, 4"
-      for (let i = 0; i < repeatCount + 1; i++) {
-        sequence.push(...repeatSegment);
-      }
+        function updateDisplay() {
+            document.getElementById("sequence").value = sequence.join(",");
+            document.getElementById("reversedSequence").value = reversed.join(",");
+            document.getElementById("totalLength").innerText = `Total: ${sequence.length}`;
+            document.getElementById("reversedLength").innerText = `Total: ${reversed.length}`;
+        }
 
-      // Thêm đoạn "1, 3"
-      sequence.push(...segmentBefore);
+        function displayMessage(message, clear) {
+            document.getElementById("sequence").value = clear ? "" : message;
+            document.getElementById("reversedSequence").value = clear ? "" : "";
+            document.getElementById("totalLength").innerText = "Total: 0";
+            document.getElementById("reversedLength").innerText = "Total: 0";
+        }
 
-      // Thêm đoạn "2, 5"
-      for (let i = 0; i < repeatCount + 1; i++) {
-        sequence.push(...segmentAfter);
-      }
+        function copyToClipboard(id) {
+            let text = document.getElementById(id).value;
+            navigator.clipboard.writeText(text).then(() => {
+                showNotification(`Dãy số "${id}" đã được sao chép!`);
+            });
+        }
 
-      // Thêm đoạn kết thúc "2, 3"
-      sequence.push(...endSegment);
-
-      // Hiển thị dãy số
-      document.getElementById("sequence").value = sequence.join(", ");
-
-      // Đảo ngược dãy số theo yêu cầu
-      reverseSequence();
-    }
-
-    function reverseSequence() {
-      let reversed = [];
-      const repeatSegment = [1, 4]; // Lặp "1, 4"
-      const segmentBefore = [1, 3]; // Đoạn "1, 3"
-      const segmentAfter = [2, 5];  // Đoạn "2, 5"
-      const endSegment = [2, 3];    // Đoạn kết thúc "2, 3"
-
-      // Số lần lặp của đoạn "1, 4" và "2, 5"
-      const repeatCount = (sequence.length - 8) / 4;
-
-      // Đoạn 2,5 sẽ đứng đầu
-      for (let i = 0; i < repeatCount + 1; i++) {
-        reversed.push(...segmentAfter);
-      }
-
-      // Đoạn 2,3 ở giữa
-      reversed.push(...endSegment);
-
-      // Đoạn 1,4 đứng cuối
-      for (let i = 0; i < repeatCount + 1; i++) {
-        reversed.push(...repeatSegment);
-      }
-
-      // Đoạn 1,3 ở cuối cùng
-      reversed.push(...segmentBefore);
-
-      // Hiển thị dãy số đảo ngược
-      document.getElementById("reversedSequence").value = reversed.join(", ");
-    }
-
-    // Hàm sao chép dãy số
-    function copySequence() {
-      // Lấy dãy số từ phần tử input
-      let sequenceText = document.getElementById("sequence").value;
-
-      // Tạo một trường input tạm thời để sao chép
-      let tempInput = document.createElement("input");
-      tempInput.value = sequenceText;
-      document.body.appendChild(tempInput);
-      tempInput.select();
-      document.execCommand("copy");
-      document.body.removeChild(tempInput);
-
-      alert("Dãy số đã được sao chép!");
-    }
-  </script>
+        function showNotification(message) {
+            let notification = document.createElement("div");
+            notification.innerText = message;
+            Object.assign(notification.style, {
+                position: "fixed", bottom: "20px", right: "20px", backgroundColor: "#4caf50",
+                color: "#fff", padding: "10px 20px", borderRadius: "5px",
+                boxShadow: "0px 4px 6px rgba(0, 0, 0, 0.2)", fontSize: "16px", zIndex: "1000"
+            });
+            document.body.appendChild(notification);
+            setTimeout(() => document.body.removeChild(notification), 3000);
+        }
+    </script>
 
 </body>
 </html>
