--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <span id="reversedLength">Total: 0</span>
             <button id="copyButton" onclick="copyToClipboard('reversedSequence')"><i class="fa-solid fa-copy"></i></button>
         </div>
+
+        <div class="copyright">
+            © 2025 NTH2705. All rights reserved.
+        </div>
     </div>
 
     <script>
